feat: Implement multi-chain bridge functionality and testing infrastructure

--- a/.env.example
+++ b/.env.example
@@ -53,4 +53,56 @@ POLLING_INTERVAL=1000
 GAS_PRICE_LIMIT=3000000000 # 3 Gwei
 
 # BaseScan API for contract verification
-BASESCAN_API_KEY="your_basescan_api_key_here"
+BASESCAN_API_KEY="your_basescan_api_key"
+
+# Chain RPC URLs
+ETHEREUM_RPC_URL=https://eth-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+ARBITRUM_RPC_URL=https://arb-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+OPTIMISM_RPC_URL=https://opt-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+MODE_RPC_URL=https://mainnet.mode.network
+SONIC_RPC_URL=https://mainnet.sonic.network
+
+# WebSocket URLs (optional)
+ETHEREUM_WS_URL=wss://eth-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+BASE_WS_URL=wss://base-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+POLYGON_WS_URL=wss://polygon-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+ARBITRUM_WS_URL=wss://arb-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+OPTIMISM_WS_URL=wss://opt-mainnet.g.alchemy.com/v3/YOUR_ALCHEMY_KEY
+MODE_WS_URL=wss://mainnet.mode.network/ws
+SONIC_WS_URL=wss://mainnet.sonic.network/ws
+
+# API Keys
+ALCHEMY_API_KEY=YOUR_ALCHEMY_API_KEY
+INFURA_API_KEY=YOUR_INFURA_API_KEY
+ETHERSCAN_API_KEY=YOUR_ETHERSCAN_API_KEY
+BASESCAN_API_KEY=YOUR_BASESCAN_API_KEY
+POLYGONSCAN_API_KEY=YOUR_POLYGONSCAN_API_KEY
+ARBISCAN_API_KEY=YOUR_ARBISCAN_API_KEY
+OPTIMISM_API_KEY=YOUR_OPTIMISM_API_KEY
+MODE_API_KEY=YOUR_MODE_API_KEY
+SONIC_API_KEY=YOUR_SONIC_API_KEY
+
+# Bridge Contract Addresses
+MODE_L1_BRIDGE=0x0000000000000000000000000000000000001010
+MODE_L2_BRIDGE=0x0000000000000000000000000000000000001010
+MODE_MESSAGE_SERVICE=0x0000000000000000000000000000000000001011
+SONIC_BRIDGE_ROUTER=0x0000000000000000000000000000000000001010
+SONIC_TOKEN_BRIDGE=0x0000000000000000000000000000000000001011
+SONIC_LIQUIDITY_POOL=0x0000000000000000000000000000000000001012
+
+# Gas Settings
+MODE_MAX_GAS_PRICE=500  # gwei
+MODE_PRIORITY_FEE=2     # gwei
+SONIC_MAX_GAS_PRICE=1000  # gwei
+SONIC_PRIORITY_FEE=1      # gwei fixed
+
+# Security Settings
+PRIVATE_KEY=YOUR_PRIVATE_KEY  # Be very careful with this!
+WALLET_ADDRESS=YOUR_WALLET_ADDRESS
+
+# Monitoring Settings
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+LOG_LEVEL=INFO
