--- a/pytest.ini
+++ b/pytest.ini
@@ -5,13 +5,13 @@ asyncio_default_fixture_loop_scope = function
 # Test categories
 markers =
     # Core test types
-    unit: mark a test as a unit test
-    integration: mark a test as an integration test
+    unit: Unit tests
+    integration: Integration tests
     e2e: mark a test as end-to-end test
     benchmark: mark a test as a performance benchmark
     
     # Performance categories
-    slow: mark a test as slow running (>1s)
+    slow: Tests that take longer to run
     very_slow: mark a test as very slow running (>5s)
     performance_critical: mark performance-critical components
     memory_intensive: mark tests that require significant memory
@@ -19,7 +19,7 @@ markers =
     # Infrastructure requirements
     monitoring: mark a test as monitoring-related
     visualization: mark a test as visualization-related
-    network: mark a test as requiring network access
+    network: Tests that require network connectivity
     redis: mark a test as requiring Redis
     prometheus: mark a test as requiring Prometheus
     jaeger: mark a test as requiring Jaeger
@@ -75,8 +75,9 @@ markers =
 
 # Test discovery
 testpaths =
-    tests/unit
+    tests/core
     tests/integration
+    tests/execution
     tests/performance
     tests/security
     tests/chaos
@@ -85,17 +86,17 @@ testpaths =
     tests/compliance
     tests/reliability
 
-python_files =
-    test_*.py
-    *_test.py
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
 
 # Test execution
 addopts =
     --strict-markers
     --tb=short
+    -v
     --durations=10
     --maxfail=1
-    -v
     --disable-warnings
     -n auto
     --dist loadfile
@@ -179,4 +180,12 @@ suppress_health_check =
     too_slow
     data_too_large
     filter_too_much
-    function_scoped_fixture 
+    function_scoped_fixture
+
+# Environment variables for tests
+env =
+    PYTHONPATH=src
+    TEST_ENV=test
+    TEST_ETHEREUM_RPC=http://localhost:8545
+    TEST_BASE_RPC=http://localhost:8546
+    TEST_POLYGON_RPC=http://localhost:8547 
