--- a/config.json
+++ b/config.json
@@ -11,19 +11,19 @@
         "max_position_size_eth": 5000000000000000000
     },
     "dexes": {
-        "uniswap_v4": {
-            "router": "0x198EF79F1F515F02dFE9e3115eD9fC07183f02fC",
+        "uniswap_v3": {
+            "router": "0x2626664c2603336E57B271c5C0b26F421741e481",
             "factory": "0x33128a8fC17869897dcE68Ed026d694621f6FDfD",
-            "dex_type": "UniswapV4",
-            "fee_tiers": [1, 3, 10],
+            "dex_type": "UniswapV3",
+            "fee_tiers": [100, 500, 3000, 10000],
             "enabled": true,
             "is_stable_pair": false
         },
-        "sushiswap_v3": {
-            "router": "0x6BDED42c6DA8FD5E8B11852d05597c0F7C8D8E86",
-            "factory": "0xc35DADB65012eC5796536bD9864eD8773aBc74C4",
+        "sushiswap": {
+            "router": "0x6BDED42c6DA8FD5E8B11852d05692eE20717c7fE",
+            "factory": "0x71524B4f93c58fcbF659783284E38825f0622859",
             "dex_type": "UniswapV3",
-            "fee_tiers": [1, 3, 10],
+            "fee_tiers": [100, 500, 3000],
             "enabled": true,
             "is_stable_pair": false
         },
@@ -36,10 +36,10 @@
             "is_stable_pair": false
         },
         "baseswap": {
-            "router": "0x327Df1E6de05895d2ab08513aaDD9313Fe505F36",
+            "router": "0x327Df1E6de05895d2ab08513aaDD9313Fe505d86",
             "factory": "0xFDa619b6d20975be80A10332cD39b9a4b0FAa8BB",
             "dex_type": "UniswapV2",
-            "fee_tiers": [3],
+            "fee_tiers": [],
             "enabled": true,
             "is_stable_pair": false
         },
@@ -47,31 +47,47 @@
             "router": "0xcF77a3Ba9A5CA399B7c97c74d54e5b1Beb874E43",
             "factory": "0x420DD381b31aEf6683db6B902084cB0FFECe40Da",
             "dex_type": "UniswapV2",
-            "fee_tiers": [1],
+            "fee_tiers": [],
+            "enabled": true,
+            "is_stable_pair": false
+        },
+        "swapbased": {
+            "router": "0xaaa3b1F1bd7BCc97fD1917c18ADE665C5D31F066",
+            "factory": "0xFDa619b6d20975be80A10332cD39b9a4b0FAa8BB",
+            "dex_type": "UniswapV2",
+            "fee_tiers": [],
             "enabled": true,
             "is_stable_pair": false
         },
         "alienbase": {
-            "router": "0xb0505d78A2A6d49fA6e4905Ba9D6efC472B642C2",
+            "router": "0x8c1A3cF8f83074169FE5D7aD50B978e1cD6b37c7",
             "factory": "0x3E84D913803b02A4a7f027165E8cA42C14C0FdE7",
             "dex_type": "UniswapV2",
-            "fee_tiers": [3],
-            "enabled": true,
-            "is_stable_pair": false
-        },
-        "maverick": {
-            "router": "0x32D02Fc7722E81F6Ac6bD1b70Ef5277eD3566fb9",
-            "factory": "0x42f2dB0AA4D935C1Cf236F886f9dC62E068E8ABe",
-            "dex_type": "Maverick",
-            "fee_tiers": [1, 3, 10],
+            "fee_tiers": [],
             "enabled": true,
             "is_stable_pair": false
         },
         "synthswap": {
-            "router": "0x5589D08C49cdDDF48Bb9F6e648C587d5d4533B28",
-            "factory": "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f",
+            "router": "0x7C2c7E7bA4Df5101931bF49C5c2Eb4d9c59D9F0b",
+            "factory": "0x9e343Bea27a12B23523ad88333a1B0f68cc1F05E",
             "dex_type": "UniswapV2",
-            "fee_tiers": [3],
+            "fee_tiers": [],
+            "enabled": true,
+            "is_stable_pair": false
+        },
+        "velocore": {
+            "router": "0x85E8262849Cd8479A3Cd0D1DaB5886D51E585E28",
+            "factory": "0x6c9a0D8B1c7a95a299e7Bdc6C0Bb2c8E357E4E41",
+            "dex_type": "UniswapV2",
+            "fee_tiers": [],
+            "enabled": true,
+            "is_stable_pair": false
+        },
+        "maverick": {
+            "router": "0x32AED3Bce901DA12ca8489788F3A99fCe1056e14",
+            "factory": "0x4DA6fe129D4c95D07a257E1B5eC98B44327c4099",
+            "dex_type": "Maverick",
+            "fee_tiers": [100, 500, 3000],
             "enabled": true,
             "is_stable_pair": false
         }
