--- a/config/monitoring/alert_rules.yml
+++ b/config/monitoring/alert_rules.yml
@@ -22,13 +22,13 @@ groups:
 
       # Trading Performance Alerts
       - alert: LowTransactionSuccessRate
-        expr: (sum(successful_arbitrage_transactions_total) / sum(arbitrage_transactions_total) * 100) < 85
+        expr: (sum(successful_arbitrage_transactions_total) / sum(arbitrage_transactions_total) * 100) < 80
         for: 15m
         labels:
           severity: critical
         annotations:
           summary: Low transaction success rate
-          description: Transaction success rate has fallen below 85% in the last 15 minutes
+          description: Transaction success rate has fallen below 80% in the last 15 minutes
 
       - alert: NegativeProfit
         expr: sum(strategy_profit_usd) < 0
@@ -95,4 +95,36 @@ groups:
           severity: warning
         annotations:
           summary: Slow strategy execution
-          description: "Strategy {{ $labels.strategy }} average execution time is above 5 seconds" 
+          description: "Strategy {{ $labels.strategy }} average execution time is above 5 seconds"
+          
+      # DEX-specific Alerts
+      - alert: DEXLatencySpike
+        expr: rate(dex_latency_seconds_bucket[5m])[0] > 1
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          summary: DEX latency spike
+          description: DEX interaction latency is above 1 second
+
+      - alert: FlashLoanFailure
+        expr: |
+          sum(rate(dex_transactions_total{strategy="flash_loan_arbitrage",status="failure"}[15m])) /
+          sum(rate(dex_transactions_total{strategy="flash_loan_arbitrage"}[15m])) > 0.2
+        for: 15m
+        labels:
+          severity: critical
+        annotations:
+          summary: High flash loan failure rate
+          description: Flash loan failure rate is above 20% in the last 15 minutes
+
+      - alert: MultiHopFailure
+        expr: |
+          sum(rate(dex_transactions_total{strategy="multi_hop_arbitrage",status="failure"}[15m])) /
+          sum(rate(dex_transactions_total{strategy="multi_hop_arbitrage"}[15m])) > 0.3
+        for: 15m
+        labels:
+          severity: critical
+        annotations:
+          summary: High multi-hop failure rate
+          description: Multi-hop arbitrage failure rate is above 30% in the last 15 minutes 
