--- a/config/monitoring_config.json
+++ b/config/monitoring_config.json
@@ -1,9 +1,14 @@
 {
+    "$schema": "./schemas/monitoring_schema.json",
+    "version": "1.0.0",
+    "last_updated": "2024-02-26",
     "monitoring": {
+        "metrics_interval": 60,
+        "log_level": "INFO",
+        "enable_metrics": true,
+        "enable_tracing": true,
+        "enable_profiling": true,
         "prometheus_port": 8000,
-        "cache_enabled": true,
-        "max_memory_entries": 10000,
-        "flush_interval": 100,
         "trade_cache_ttl": 3600,
         
         "redis": {
@@ -19,18 +24,18 @@
             "compression": "snappy"
         },
         
-        "intervals": {
-            "system_monitor": 60,
-            "performance_analysis": 300,
-            "cache_cleanup": 3600
+        "alert_thresholds": {
+            "min_profit": -0.1,
+            "max_gas_price": 100.0,
+            "max_execution_time": 5.0,
+            "min_success_rate": 95.0
         },
         
-        "thresholds": {
-            "cpu_warning": 80,
-            "memory_warning": 85,
-            "disk_warning": 90,
-            "latency_warning": 2.0,
-            "error_rate_warning": 0.1
+        "resource_thresholds": {
+            "cpu": {"warning": 80.0, "critical": 90.0},
+            "memory": {"warning": 80.0, "critical": 90.0},
+            "disk": {"warning": 85.0, "critical": 95.0},
+            "network": {"warning": 5.0, "critical": 10.0}
         },
         
         "visualization": {
@@ -46,7 +51,17 @@
             }
         },
         
-        "learning": {
+        "ml_config": {
+            "profit_prediction": {
+                "window_size": 24,
+                "train_size": 0.8,
+                "feature_importance_threshold": 0.05
+            },
+            "anomaly_detection": {
+                "contamination": 0.1,
+                "n_estimators": 100,
+                "max_features": 0.8
+            },
             "feature_generation": {
                 "lookback_periods": ["1h", "4h", "24h", "7d"],
                 "rolling_windows": ["5m", "15m", "1h", "4h"],
@@ -77,32 +92,6 @@
                     "smtp_port": 587,
                     "sender": null,
                     "recipients": []
-                }
-            },
-            "rules": {
-                "high_cpu": {
-                    "threshold": 80,
-                    "duration": "5m",
-                    "severity": "warning"
-                },
-                "high_memory": {
-                    "threshold": 85,
-                    "duration": "5m",
-                    "severity": "warning"
-                },
-                "low_success_rate": {
-                    "threshold": 0.8,
-                    "duration": "15m",
-                    "severity": "critical"
-                },
-                "negative_profit": {
-                    "duration": "30m",
-                    "severity": "critical"
-                },
-                "high_latency": {
-                    "threshold": 2.0,
-                    "duration": "5m",
-                    "severity": "warning"
                 }
             }
         },
